2019-08-09  DJ Delorie  <dj@redhat.com>

	* elf/dl-tunables.list: Add glibc.malloc.mxfast.
	* manual/tunables.texi: Document it.
	* malloc/malloc.c (do_set_mxfast): New.
	(__libc_mallopt): Call it.
	* malloc/arena.c: Add mxfast tunable.
	* malloc/tst-mxfast.c: New.
	* malloc/Makefile: Add it.

2018-12-19  Andreas Schwab  <schwab@suse.de>

	* nscd/connections.c (check_use): Don't abort on invalid len.

2019-05-17  Wilco Dijkstra  <wdijkstr@arm.com>

	* malloc/malloc.c (MAX_TCACHE_COUNT): Increase to UINT16_MAX.
	(tcache_put): Remove redundant assert.
	(tcache_get): Remove redundant asserts.
	(__libc_malloc): Check tcache count is not zero.
	* manual/tunables.texi (glibc.malloc.tcache_count): Update maximum.

2019-02-04  Joseph Myers  <joseph@codesourcery.com>

	* malloc/malloc.c (tcache_get): Compare tcache->counts[tc_idx]
	with 0, not tcache->entries[tc_idx].

2019-09-13  Wilco Dijkstra  <wdijkstr@arm.com>

	* string/memmem.c (__memmem): Rewrite to improve performance.

2019-06-12  Wilco Dijkstra  <wdijkstr@arm.com>

	* string/str-two-way.h (two_way_short_needle): Add inline to avoid
	warning.
	(two_way_long_needle): Block inlining.
	* string/strstr.c (strstr2): Add new function.
	(strstr3): Likewise.
	(STRSTR): Completely rewrite strstr to improve performance.

2019-09-13  Rajalakshmi Srinivasaraghavan  <raji@linux.vnet.ibm.com>

	* string/memmem.c: Use memcmp for first match.

2019-09-13  Wilco Dijkstra  <wdijkstr@arm.com>

	* string/strcasestr.c (STRCASESTR): Simplify and speedup first match.
	* string/strstr.c (AVAILABLE): Likewise.

2019-09-06  Wilco Dijkstra  <wdijkstr@arm.com>

	* manual/tunables.texi (glibc.cpu.name): Add ares tunable.
	* sysdeps/aarch64/multiarch/memcpy.c (__libc_memcpy): Use
	__memcpy_falkor for ares.
	* sysdeps/unix/sysv/linux/aarch64/cpu-features.h (IS_ARES):
	Add new define.
	* sysdeps/unix/sysv/linux/aarch64/cpu-features.c (cpu_list):
	Add ares cpu.

2019-07-12  Adhemerval Zanella  <adhemerval.zanella@linaro.org>

	[BZ #24699]